erDiagram
    users {
        string id PK "UUID, PK"
        string email UK "Unique"
        string password_hash
        string role "e.g., 'user', 'admin'"
        datetime created_at
    }
    movies {
        string id PK "UUID, PK"
        string title
        string description
        string original_file_path "Path to original uploaded file"
        string transcoded_file_path "Path to transcoded HLS directory"
        string hls_playlist_url "Public URL to .m3u8 file"
        int duration_seconds
        bigint file_size
        string mime_type
        string status "processing|transcoding|available|failed"
        string uploaded_by FK "FK to users"
        datetime created_at
        datetime processing_started_at "When transcoding started"
        datetime processing_ended_at "When transcoding completed"
    }
    rooms {
        string id PK "UUID, PK"
        string movie_id FK "FK to movies"
        string host_id FK "FK to users"
        string name "Room display name"
        text description "Room description"
        datetime created_at
    }
    room_access {
        string user_id PK, FK "Composite PK, FK to users"
        string room_id PK, FK "Composite PK, FK to rooms"
        string access_type "granted | guest"
        string status "granted | pending"
        datetime granted_at
    }
    guest_access_requests {
        string id PK "UUID, PK"
        string room_id FK "FK to rooms"
        string guest_name
        text request_message
        string status "pending | approved | denied"
        datetime requested_at
        string reviewed_by FK "FK to users"
        datetime reviewed_at
    }
    room_invitations {
        string id PK "UUID, PK"
        string room_id FK "FK to rooms"
        string inviter_id FK "FK to users"
        string email
        string token UK "Unique invitation token"
        text message
        datetime expires_at
        datetime used_at
        datetime created_at
    }
    guest_sessions {
        string id PK "UUID, PK"
        string room_id FK "FK to rooms"
        string guest_name
        string session_token UK "Unique session token"
        datetime expires_at
        string approved_by FK "FK to users"
        datetime created_at
    }
    room_sessions {
        string id PK "UUID, PK"
        string room_id FK "FK to rooms"
        string host_id FK "FK to users"
        string movie_id FK "FK to movies"
        string session_name
        datetime created_at
        datetime ended_at
    }
    room_session_events {
        string id PK "UUID, PK"
        string session_id FK "FK to room_sessions"
        string user_id FK "FK to users"
        string event_type "join|leave|play|pause|seek"
        jsonb event_data "Flexible event data"
        real video_time "Video position at event"
        datetime timestamp
    }
    tokens {
        string id PK "UUID, PK"
        string user_id FK "FK to users"
        string value "Token hash"
        datetime created_at
    }

    %% Relationships
    users ||--o{ room_access : "is member of"
    users ||--o{ rooms : "hosts"
    users ||--o{ movies : "uploads"
    users ||--o{ room_sessions : "hosts session"
    users ||--o{ room_session_events : "generates events"
    users ||--o{ tokens : "has refresh tokens"
    users ||--o{ guest_access_requests : "reviews requests"
    users ||--o{ room_invitations : "sends invitations"
    users ||--o{ guest_sessions : "approves guests"
    
    rooms ||--|{ room_access : "has members"
    rooms }|--|| movies : "plays"
    rooms ||--o{ room_sessions : "has sessions"
    rooms ||--o{ guest_access_requests : "receives requests"
    rooms ||--o{ room_invitations : "has invitations"
    rooms ||--o{ guest_sessions : "has guest sessions"
    
    room_sessions ||--o{ room_session_events : "contains events"
    room_sessions }|--|| movies : "plays movie"